# ChangeLog for app-office/taskcoach
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-office/taskcoach/ChangeLog,v 1.93 2014/05/30 22:24:35 caster Exp $

*taskcoach-1.3.40 (30 May 2014)

  30 May 2014; Vlastimil Babka <caster@gentoo.org> +taskcoach-1.3.40.ebuild:
  Version bump. Stopped renaming upstream executable taskcoach.py to taskcoach,
  as it was fragile. Fixes bug #488416.

*taskcoach-1.3.32-r1 (09 Sep 2013)

  09 Sep 2013; Agostino Sarubbo <ago@gentoo.org> +taskcoach-1.3.32-r1.ebuild:
  Migrate to distutils-r1, thanks to mgorny, leave the rename hack

*taskcoach-1.3.32 (09 Sep 2013)

  09 Sep 2013; Agostino Sarubbo <ago@gentoo.org> +taskcoach-1.3.32.ebuild:
  Version bump to 1.3.32

*taskcoach-1.3.29 (28 Apr 2013)

  28 Apr 2013; Agostino Sarubbo <ago@gentoo.org> +taskcoach-1.3.29.ebuild:
  Version bump to 1.3.29

*taskcoach-1.3.27 (13 Mar 2013)

  13 Mar 2013; Agostino Sarubbo <ago@gentoo.org> +taskcoach-1.3.27.ebuild,
  -taskcoach-1.3.22.ebuild:
  Version bump, remove old

*taskcoach-1.3.22 (16 Jan 2013)

  16 Jan 2013; Agostino Sarubbo <ago@gentoo.org> +taskcoach-1.3.22.ebuild:
  version bump to 1.3.22

  04 Sep 2012; Agostino Sarubbo <ago@gentoo.org> -taskcoach-1.2.31.ebuild,
  -taskcoach-1.3.8.ebuild:
  Remove old

  04 Sep 2012; Agostino Sarubbo <ago@gentoo.org> taskcoach-1.3.18.ebuild:
  Stable for x86, wrt bug #433926

  04 Sep 2012; Agostino Sarubbo <ago@gentoo.org> taskcoach-1.3.18.ebuild:
  Stable for amd64, wrt bug #433926

*taskcoach-1.3.18 (04 Sep 2012)

  04 Sep 2012; Agostino Sarubbo <ago@gentoo.org> +taskcoach-1.3.18.ebuild:
  Version bump to 1.3.18, wrt to bug #432928

*taskcoach-1.3.8 (01 Mar 2012)

  01 Mar 2012; Vlastimil Babka <caster@gentoo.org> -files/3081666.patch,
  -taskcoach-1.2.27.ebuild, -taskcoach-1.2.28.ebuild, -taskcoach-1.2.30.ebuild,
  +taskcoach-1.3.8.ebuild:
  Version bump, bug #406389. All edit dialogs make changes immediately, thus no