@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 DIST TaskCoach-1.3.18.tar.gz 2597941 SHA256 58a1ce7a65b58d71f2e029d69bfbf8c7e39b7623d11bfe5820faa6a224e83692 SHA512 07479e26a30ce66f7fc6f4ea8ef3fe3ddd842516ea68966b95dbb660fb0d61f9eb83d3920ca064c5ceeef6f6237d3fd5479c19899ec4cd2ef012ee90d1994e62 WHIRLPOOL 1943407958802b2d19fee638039f113ba2f62a69f74ee68d2859bfa0dfd005b4929b3c7329e79b5b2931ab7cbab511ec5499718425a1eed3a724ed76706f3ce5
 DIST TaskCoach-1.3.27.tar.gz 2750875 SHA256 37b7b5f94aef590593e7f5db0b8ea28b45aae7286b86fc15d6b514b25d0b4c51 SHA512 501944c9abaa6fa7834e3111cb20687216f81c48d6eb5eaf7dd5db1d2406a40819b786d5faa1db758aa90528ad6a18d196ecfc839fb0303cfe4bf6682c6558c2 WHIRLPOOL 63ea491777cb74df9a05ede3ba2cde02f036978dfc79eeb5b60ae5a912d7b0600c36a9c14ee7a8a9a895e3623dcb8676571c15f96c536c621a3b2b53a201e52e
@@ -11,13 +11,13 @@ EBUILD taskcoach-1.3.27.ebuild 1217 SHA256 c0116914c818fbedd85f7820ee80ede7af0f8
 EBUILD taskcoach-1.3.29.ebuild 1217 SHA256 8dbce9fd40b5f873324004d958940b9ea67b04bf3718d0a9ea86f2c15e0e1f5b SHA512 2ed38df208abc9335ce2d4cb4ca89fe88b3aab277070af1ac43e33733ed68f95c8e802a45d9fe29ae10561fe372060473878bf3f141d24fe3964bf41389fd61f WHIRLPOOL 3f0f2951d2496f5be7f8e47f285c594602ae90f4a48c2649687dd3977d93986dbf9c4c72deca54991b007b34da220da1926ecb9f0d0df8d6a355128c14a17635
 EBUILD taskcoach-1.3.32-r1.ebuild 1193 SHA256 493d3007eb3d97947c0de72c547580979f52ef7f3fdebb69b8f8bb1bb2c36916 SHA512 ac57c1b963b578accb3585ad2625d10a206563c79298742e52ddfd1f30bb54e04286da383c4b28e162c06d5a1eb71805827426584a81b49ab49efa8c01b88148 WHIRLPOOL 0552d52b2fb46d4fd66c34cf0b15aede8a304527ae16a11372a73edfcb870c00f43279a34a4d3789f13437c991aac548c7b02187943b2c93426845896e881999
 EBUILD taskcoach-1.3.32.ebuild 1217 SHA256 e0a2a756d01e925f0836657315ec5da836cf82ad260e2d5c342115e30480cc98 SHA512 21e936e01753a6fb22eb1596173f83c14d09e3bd09e2bae35e771ddc99a0adb954f2d8c47e88e53a6b90a570f7e36cd5845f32a42a566a85e4a9c67c846e0c2a WHIRLPOOL e687749d005d3587b0e640867f32183c14bf4508d232f88bd9f5444c5759a2e3f96e9ffe54d5acc1ae9e36a936f1e8dfd85cf4629e2783584a6b114571e7aca0
-EBUILD taskcoach-1.3.40.ebuild 1184 SHA256 4f142976e4943b3095f211ec00de64abf3cd656a830226bdc21a1e5d239b736c SHA512 f7b1be063341f3275f1fe937284e68c97b1174288457154f1ec7598295065270f882a9b2bb342cb448c6a60050ca681c3ecd37f49ad77e2166a4975ea56cbb5b WHIRLPOOL f5bd1630ccd11d08f8c452ad3d46d587288e7303d403b44914a3db8ca5e86e025ad8dc20aa78e20e32d1d5802dab966c439938d44bf552caa7a3ccd94c142496
-MISC ChangeLog 15332 SHA256 58ec8975a74b7f8bebd2a0bc755886fb8f6edd0cae7cc99eb25d1be7e21a8012 SHA512 9927ee3ffefcf76296c99a4d86693f205d2c9ff8ec87c54ce9dd775b7cdc83ea79cf74568b3bdff3bafc80915646090aca9e5ff7f0123a9f744a7b414dabf3c6 WHIRLPOOL 449d7acc5950fefdd3222e804a9a094ebbc3bf1c406e10b9fab737e0769364598d900292642a2d180421d2255e9d49d817c2fa12b75def81be25faa7bc1cff71
+EBUILD taskcoach-1.3.40.ebuild 1186 SHA256 0e682ae52d85beb1648a754d91432ecd1fd50b4a5d9d8b268472608f4eb51abd SHA512 d1ef7a9980c82b3aa7ef81abb67a74f84032261b0a9da8e2d77997cc9e37e358c372ea7edc670c0d56eb602e06904bb7022064e1befca7f0647e5847d5194136 WHIRLPOOL 819b2428f35b129732ab8790d5ac6757718be87ed75754298c12c236d40c302476d96fadd10edec0ab9d91f426f9088d4bccf61bf8cfd0bf7c03f65dce6aa501
+MISC ChangeLog 15445 SHA256 bce9c6bf5907116677553300c974484319a4e50aa219bf80270dbdf81352ff10 SHA512 b3dac68d8dced0aa2649a0ad13bb5678eeb6b60d5b46b616809ad7da6d42bf7be13cf1ed4ca11b3307e895031cfdd99a6f7fdc134f5e3b6540a86721a972f8a8 WHIRLPOOL b752443336691ecebcfb03f0a63bad689a2f559f6a3b1f53d41b683048129e927d6cea76aae0ff8620f3717e9e5bc2e1d210caab97abf7be889fdad93b3a5726
 MISC metadata.xml 197 SHA256 d0157d70e6b86f13e8fef11e27de0e46f3aacf141697e0b73a5851a115471aeb SHA512 468a25cb3f8b3cd1ff7158f56c62b11ad248c2d1daf3f68352c65db11b46ef085c8d15047d60fa1ba0fdcd70ed7f289a49096bb9bf4d8b672b0bea8be5ae46cf WHIRLPOOL 665278cb663f37ec2c671f7129c1672c062f0a05528ac0bc3640813e02c2ce860cba34904e2f8ea5ca87eb4d5863be3425355a6d3361fa3f7d88892d2c102811
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iEYEAREKAAYFAlOJBS8ACgkQtbrAj05h3oRa5ACgjp08Sw6D9CUpoITd4urJaGMf
-zhMAn1qfgim58/FYUyyqqUP5a15Xkall
-=79Ut
+iEYEAREIAAYFAlPmaRoACgkQakKUmsHeVLKufwCfbIh13sJs7g4Bk18LiDKa1LrV
+igEAoIYKGtZmRZ5+cHLyMLpnpaX6yG4x
+=hUVU
 -----END PGP SIGNATURE-----
