@@ -13,13 +13,13 @@ DIST FreeImage3154.zip 5513923 SHA256 eb6361519d33131690a0e726b085a05825e5adf9fb
 DIST freeimage-3.15.4-libjpeg-turbo.patch.gz 5386 SHA256 e33374db55d1de1f12357138c1a2dac750957c36da9ed6052c1a6084312737a6 SHA512 8b1be0d1b63c5e0dc4f6c841f569929d7a91738c29d86bb3c3f15dd7a5a198bdc5fc6612668ac6ed263674caae1e07520eae003a5adf7395e0539f2820d888f6 WHIRLPOOL 75b8f3486ae9ebf34e7467068b0d93d1a9cc4539e27c6cbb29b617d41459333b0dc263f4003a8d81628922c1fb562452dfa39829eef721898809d40ede9498a9
 EBUILD freeimage-3.15.3-r2.ebuild 2540 SHA256 6d3722b7cafa8388d4f55efd476017a1e5373a49b0fbd18e054ce9a7c15c2020 SHA512 b37788202b29c761568b91b9f6ef6e5e1ad1dd30062b63873396809f1c15f2d10a3d383980e8f24700a4642c35edd70402188db500869050715db1419d21a897 WHIRLPOOL bd6f7a07d7264574ad7d4a481eb6b850ed881af7c6f1e33ceb5b3711334c134eb72ebe66494793d3c1b67b08bf5d22008c051189d229ff009af0c0f09887cc06
 EBUILD freeimage-3.15.3.ebuild 2548 SHA256 56de555ae952db2e4c187fa129b543457ad29e898cef278221748548a0c6f4af SHA512 6add24bbea4c29a2fd80a5f52e2d8b97b8cc94139a541afb5d02fe58d2a9f5992a58f375c037f3a5616f7dd8771b7605bb24171998e09c72e2b61421565098de WHIRLPOOL 930a83378177a9489e9ae20ac9b3d22db4dc732b82d3a806cd0d1fc6103b4c0fb909048a61ecf8d99899dc9ea38a164ff35a10a8d44e2e1019b1b8b7edb3d21d
-EBUILD freeimage-3.15.4.ebuild 2930 SHA256 7b49df84d836ce25cbb27e0ad82de56f7f70b00b71b99cfb0551cf7501b8bf24 SHA512 4c1a7a3fe7f75922db629ab0e6f31fa1c75f4b23df4a11cebdc3dd3da57f06876c6b9f3ab9a18941b83145b5be74de7f89df3d323e984f9ec193ec4b972c408c WHIRLPOOL 7d5e056d3a3e85a37c44db47006c4bc5230ae4349c8d2719cad07e26fc38d49ede758da5573a0c1b6f7942a766a5207b99191b940c7b6ca314a80975dc42de07
-MISC ChangeLog 5148 SHA256 f626dc0a447b51c6fd3b06b3ae9eb161515e60cb695c8cf531d75327932e556d SHA512 f250d1343259a11152048ae6098a9166d4a8571818879b569ac5468d9b38a31a4ba94dc02c1746cd5c2ac75aefebe4626acdc1c957edb601d042f5a1c06969b1 WHIRLPOOL ca03ed5bc8d2afa8fbb8ff53c01c3f58a4cdcf37e2d3842f994840b1b01fa69c88d395fbf0f831f537631d5556a486508aa761bba7ea59c5e06fb96123fb3df4
+EBUILD freeimage-3.15.4.ebuild 2933 SHA256 90b2ac80ea70a00be9e92d26529a7a8f412398390ded3e91e4eb5c8d71b65485 SHA512 01a4590eda34d6dfc848f4db427824979594d0b49978d12e6c612a5d78d2f1154aeb7d79aca74886f56cdae24be73cbe38386ad3658ee96f759591fd52edefec WHIRLPOOL cd84bd1a9b244d47e76b739688a85ad9a5294ba0f911af1b9ffe8f14665d9543ab3de3a670619f8f2d6a3be6857329e09d86d55863ae54afeb08620a1a0f696c
+MISC ChangeLog 5262 SHA256 9d23be0f2d4c070d73836c3937e023ac2f8f63cae4697db6538c9ed493ac12e9 SHA512 2f2dbdc58f973876be0012064838c7a14bcc806566034885de4e0cbb29aea0ada479fa7179bba9ec066ecf00e04ab1b66103157dbccc90919d2e135c70b2a304 WHIRLPOOL 33d1b61c74d1513a0b7a4dad48e1e598c4e01dfbe2d278b8885ae5caeaa72516164a2b499c78eeec525fe041f378f5d3d33fc8e58130af98e43e4d4ddcd9c470
 MISC metadata.xml 158 SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3 SHA512 d954564236b67b6ab97846b73f74e715e8f1bec2dba6595e9a5046c2e8c3b93f4879c293f9d1d02d99a533bee56156dae3f31a485697128c51af14cdbfdada8a WHIRLPOOL d03e7293d09d794d61c095a423f945b3644355a247f270a73ca8d30b4dfe9c98244297536bfd1a4bd6c14794aa1152eca20fd83bfdf3e1e74d4f676152d35ada
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iEYEAREIAAYFAlLSyz8ACgkQCaWpQKGI+9RrXgCfXxeXL81jzFF/kN7rx2E5nQO/
-6+4AnjVARwe8WL65y0Z4YTEVkOVnSx0k
-=EZC6
+iEYEAREIAAYFAlPmZ14ACgkQakKUmsHeVLLMqQCgiEE1hD6ad+3LWHeGfpPPSPbO
+PCUAn3ZCw9+GS5WeLNmFkAquXs8QTbmV
+=DyYb
 -----END PGP SIGNATURE-----
