@@ -4,10 +4,10 @@ DESCRIPTION=Image library supporting many formats
 EAPI=4
 HOMEPAGE=http://freeimage.sourceforge.net/
 IUSE=jpeg jpeg2k mng openexr png raw static-libs tiff
-KEYWORDS=amd64 ~x86 ~amd64-linux ~x86-linux
+KEYWORDS=amd64 x86 ~amd64-linux ~x86-linux
 LICENSE=|| ( GPL-2 FIPL-1.0 )
 RDEPEND=sys-libs/zlib jpeg? ( virtual/jpeg ) jpeg2k? ( media-libs/openjpeg:0 ) mng? ( media-libs/libmng ) openexr? ( media-libs/openexr ) png? ( media-libs/libpng ) raw? ( media-libs/libraw ) tiff? ( media-libs/ilmbase media-libs/tiff )
 SLOT=0
 SRC_URI=mirror://sourceforge/freeimage/FreeImage3154.zip mirror://sourceforge/freeimage/FreeImage3154.pdf http://dev.gentoo.org/~gienah/2big4tree/media-libs/freeimage/freeimage-3.15.4-libjpeg-turbo.patch.gz
 _eclasses_=eutils	06133990e861be0fe60c2b428fd025d9	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0f1760274637a138b99bb649202ea402
-_md5_=5957119474e0a4859fc108f6063816eb
+_md5_=3402cd97705731a3a5b40f4830b1b0ad
