@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/freeimage
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/freeimage/ChangeLog,v 1.32 2014/01/12 17:05:02 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/freeimage/ChangeLog,v 1.33 2014/08/09 18:36:35 nativemad Exp $
+
+  09 Aug 2014; Andreas Schuerch <nativemad@gentoo.org> freeimage-3.15.4.ebuild:
+  x86 stable, see bug 479136
 
   12 Jan 2014; Pacho Ramos <pacho@gentoo.org> freeimage-3.15.4.ebuild:
   amd64 stable, bug #479136
