@@ -1,6 +1,9 @@
 # ChangeLog for app-office/taskcoach
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/taskcoach/ChangeLog,v 1.93 2014/05/30 22:24:35 caster Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/taskcoach/ChangeLog,v 1.94 2014/08/09 18:43:59 nativemad Exp $
+
+  09 Aug 2014; Andreas Schuerch <nativemad@gentoo.org> taskcoach-1.3.40.ebuild:
+  x86 stable, see bug 487108
 
 *taskcoach-1.3.40 (30 May 2014)
 
